--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_PASSWORD=password
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=notification_service
+
+SMTP_EMAIL=poschananbussaba@gmail.com
+SMTP_PASSWORD=ncyq wwfe rpob lrzw
