fucn sent email

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DB_NAME=notification_service
 
 SMTP_EMAIL=poschananbussaba@gmail.com
 SMTP_PASSWORD=ncyq wwfe rpob lrzw
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
