--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=notification_service
 
-SMTP_EMAIL=poschananbussaba@gmail.com
-SMTP_PASSWORD=ncyq wwfe rpob lrzw
+SMTP_EMAIL=your_email@gmail.com
+SMTP_PASSWORD=password
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
